tests/golden/type_errors/break_inside_function_in_loop.cd
while true {
  fun f() {
    break;
  }
}
